Try to stop the nav bar from overflowing.

--- a/static/css/master.css
+++ b/static/css/master.css
@@ -60,20 +60,22 @@ nav {
 	position: fixed;
 	top: 0;
 	width: 100%;
+	background: #3ac;
+	color: #fff;
 }
 
 nav ul {
 	padding: 0;
-	background: #3ac;
-	color: #fff;
 	margin: 0;
+	max-width: 40rem;
 }
 
 nav ul li {
 	display: inline-block;
 	height: 2rem;
 	line-height: 2rem;
-	padding: 0 1rem;
+	width: 18%;
+	text-align: center;
 }
 
 .flashes {
